# yew-virtualized

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
examples/simple-usage/: Cargo.toml  index.html  styles.scss
examples/simple-usage/src/: main.rs
src/: lib.rs  resize_observer.rs
