[workspace]
members = [
    ".",
    "examples/simple-usage",
]

[package]
name = "yew-virtualized"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.19", git = "https://github.com/yewstack/yew.git", rev = "a6df894f212521647ebba19943cffa2377444da9" }
web-sys = { version = "0.3", features = ["DomRectReadOnly"] }
gloo-timers = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"
