[workspace]
members = [
    ".",
    "examples/simple-usage",
]

[package]
name = "yew-virtualized"
version = "0.1.0"
edition = "2021"
authors = [
  "Martin Molzer <WorldSEnder@users.noreply.github.com>",
]
license = "MIT OR Apache-2.0"
keywords = ["web", "webasm", "yew", "virtual", "list"]
categories = ["gui", "wasm", "web-programming"]
description = "A yew component that renders only the on-screen part of a scrollable list"
readme = "README.md"
repository = "https://github.com/WorldSEnder/yew-virtualized"

[dependencies]
yew = { version = "0.19" }
web-sys = { version = "0.3", features = ["DomRectReadOnly"] }
gloo-timers = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
