[package]
name = "simple-usage"
version = "0.1.0"
edition = "2021"
authors = [
  "Martin Molzer <WorldSEnder@users.noreply.github.com>",
]
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-virtualized = { path = "../.." }
yew = { version = "0.20", features = ["csr"] }

